# ModernCppPractices

./: .gitignore  CMakeLists.txt  README.md  example.txt  run.bat  run.sh  test1.txt_assigned  vcpkg.json
.github/workflows/: build.yml
src/: SampleRegistry.hpp  Testable.hpp  main.cpp
src/00_SketchBoard/Interview_1/: Task1.cpp  Task2.cpp
src/01_RAII/: RAIISample.cpp  RAIISample.hpp  README.md
src/02_SFINAE/: README.md  SFINAESample.cpp  SFINAESample.hpp
src/03_CRTP/: CRTPSample.cpp  CRTPSample.hpp  README.md
src/04_PIMPL/: PimplSample.cpp  PimplSample.hpp  README.md
src/05_RuleOfFive/: README.md  RuleOfFiveSample.cpp  RuleOfFiveSample.hpp
src/06_TypeErasure/: README.md  TypeErasureSample.cpp  TypeErasureSample.hpp
src/07_VariantVisitor/: README.md  VariantVisitorSample.cpp  VariantVisitorSample.hpp
src/08_SmartPointers/: README.md  SmartPointersSample.cpp  SmartPointersSample.hpp
src/09_ExceptionSafety/: ExceptionSafetySample.cpp  ExceptionSafetySample.hpp  README.md
src/10_MoveSemantics/: MoveSemanticsSample.cpp  MoveSemanticsSample.hpp  README.md
src/11_TagDispatching/: README.md  TagDispatchingSample.cpp  TagDispatchingSample.hpp
src/12_DeepShallowCopy/: DeepShallowCopySample.cpp  DeepShallowCopySample.hpp  README.md
src/13_CopyAndSwap/: CopyAndSwapSample.cpp  CopyAndSwapSample.hpp  README.md
src/13_CopyAndSwapIdiom/: CopyAndSwapIdiomSample.cpp  CopyAndSwapIdiomSample.hpp
src/14_Cast/: CastSample.cpp  CastSample.hpp
src/14_CastingTypes/: CastingTypesSample.cpp  CastingTypesSample.hpp  README.md
src/15_ThreadSafety/: README.md  ThreadSafetySample.cpp  ThreadSafetySample.hpp
src/16_Concepts/: ConceptsSample.cpp  ConceptsSample.hpp  README.md
src/17_Coroutines/: CoroutinesSample.cpp  CoroutinesSample.hpp  README.md
src/18_SRP/: BadExample.hpp  GoodExample.hpp  README.md  SRPSample.cpp  SRPSample.hpp
src/19_OCP/: BadExample.hpp  GoodExample.hpp  OCPSample.cpp  OCPSample.hpp  README.md
src/20_LSP/: BadExample.hpp  GoodExample.hpp  LSPSample.cpp  LSPSample.hpp  README.md
src/21_ISP/: BadExample.hpp  GoodExample.hpp  ISPSample.cpp  ISPSample.hpp  README.md
src/22_DIP/: BadExample.hpp  DIPSample.cpp  DIPSample.hpp  GoodExample.hpp  README.md
src/23_UMLRelationships/: README.md  UMLRelationshipsSample.cpp  UMLRelationshipsSample.hpp
src/24_ThreeWayComparison/: README.md  ThreeWayComparisonSample.cpp  ThreeWayComparisonSample.hpp
src/25_Projections/: ProjectionsSample.cpp  ProjectionsSample.hpp  README.md
src/26_InputOutputStream/: InputOutputStreamSample.cpp  InputOutputStreamSample.hpp  README.md
src/27_RTTI/: README.md  RTTISample.cpp  RTTISample.hpp
src/28_TemplateMeta/: NoFearTemplates.md  README.md  TMPSample.cpp  TMPSample.hpp
src/29_InplaceFactory/: InplaceFactorySample.cpp  InplaceFactorySample.hpp  README.md
tests/: CMakeLists.txt  test.cpp
